Unreleased

Fixed
    Fix ui doesn't load when server is offline (#77)

Added
    Store total storage usage for fleet analytics (#75)