@@ -4,13 +4,18 @@ namespace dhope0000\LXDClient\Tools\Projects;
 
 use dhope0000\LXDClient\Model\Client\LxdClient;
 use dhope0000\LXDClient\Model\Hosts\HostList;
+use dhope0000\LXDClient\Tools\Hosts\HasExtension;
 
 class GetHostsProjects
 {
-    public function __construct(HostList $hostList, LxdClient $lxdClient)
-    {
+    public function __construct(
+        HostList $hostList,
+        LxdClient $lxdClient,
+        HasExtension $hasExtension
+    ) {
         $this->hostList = $hostList;
         $this->lxdClient = $lxdClient;
+        $this->hasExtension = $hasExtension;
     }
 
     public function getAll()
@@ -26,6 +31,11 @@ class GetHostsProjects
                 continue;
             }
             $client = $this->lxdClient->getANewClient($host["Host_ID"]);
+
+            if(!$this->hasExtension->checkWithClient($client, "projects")){
+                continue;
+            }
+
             $projects = $client->projects->all();
 
 
