@@ -2,6 +2,7 @@ Unreleased
 
 Fixed
     Fix ui doesn't load when server is offline (#77)
+    Cant view projects page if one host doesn't have projects endpoint (#76)
 
 Added
     Store total storage usage for fleet analytics (#75)
